De-normalize discriminator, keeping them at the same level in hierarchy: rename S3 to S3STATIC along S3STS.
