# backend/src/main/java/org/cryptomator/hub/api/cipherduck/StorageProfileDto.java
@@ -4,8 +4,8 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonValue;
 import jakarta.persistence.Id;
 import org.cryptomator.hub.entities.cipherduck.StorageProfile;
-import org.cryptomator.hub.entities.cipherduck.StorageProfileS3;
 import org.cryptomator.hub.entities.cipherduck.StorageProfileS3STS;
+import org.cryptomator.hub.entities.cipherduck.StorageProfileS3Static;
 import org.eclipse.microprofile.openapi.annotations.media.DiscriminatorMapping;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 
@@ -18,17 +18,18 @@ import java.util.UUID;
 @Schema(
 
 		title = "StorageProfile",
-		oneOf = {StorageProfileS3Dto.class, StorageProfileS3STSDto.class},
+		oneOf = {StorageProfileS3StaticDto.class, StorageProfileS3STSDto.class},
 		discriminatorMapping = {
-				// TODO make it s3static
-				@DiscriminatorMapping(value = "S3", schema = StorageProfileS3Dto.class),
+
+				@DiscriminatorMapping(value = "S3STATIC", schema = StorageProfileS3StaticDto.class),
 				@DiscriminatorMapping(value = "S3STS", schema = StorageProfileS3STSDto.class),
 		},
 		discriminatorProperty = "protocol"
 )
-public abstract sealed class StorageProfileDto permits StorageProfileS3Dto {
+// although we have a dto hierarchy (StorageProfileDto <- StorageProfileS3Dto <- StorageProfileS3STSDto), the DB schema keeps the the tables separate (without foreign keys). There is one common GET service for listing and specific endpoints for POSTing profiles. Future profiles should inherit from StorageProfileDto. Serialized dtos are kept apart by a discriminator property, the openapi generators can de-serialized using it.
+public abstract sealed class StorageProfileDto permits StorageProfileS3StaticDto {
 	public enum Protocol {
-		s3("S3"),
+		s3static("S3STATIC"),
 		s3sts("S3STS");
 		private final String protocol;
 
@@ -81,8 +82,8 @@ public abstract sealed class StorageProfileDto permits StorageProfileS3Dto {
 		// TODO refactor to JEP 441 in JDK 21
 		if (storageProfile instanceof StorageProfileS3STS storageProfileS3STS) {
 			return StorageProfileS3STSDto.fromEntity(storageProfileS3STS);
-		} else if (storageProfile instanceof StorageProfileS3 storageProfileS3) {
-			return StorageProfileS3Dto.fromEntity(storageProfileS3);
+		} else if (storageProfile instanceof StorageProfileS3Static storageProfileS3Static) {
+			return StorageProfileS3StaticDto.fromEntity(storageProfileS3Static);
 		} else {
 			throw new IllegalStateException("StorageProfile is not of type StorageProfileS3 or StorageProfileS3STS");
 		}
