# frontend/src/openapi/openapi.json
@@ -296,7 +296,7 @@
       "Protocol": {
         "type": "string",
         "enum": [
-          "S3",
+          "S3STATIC",
           "S3STS"
         ]
       },
@@ -350,7 +350,7 @@
       "StorageProfileDto": {
         "oneOf": [
           {
-            "$ref": "#/components/schemas/StorageProfileS3Dto"
+            "$ref": "#/components/schemas/StorageProfileS3StaticDto"
           },
           {
             "$ref": "#/components/schemas/StorageProfileS3STSDto"
@@ -360,7 +360,7 @@
         "discriminator": {
           "propertyName": "protocol",
           "mapping": {
-            "S3": "#/components/schemas/StorageProfileS3Dto",
+            "S3STATIC": "#/components/schemas/StorageProfileS3StaticDto",
             "S3STS": "#/components/schemas/StorageProfileS3STSDto"
           }
         },
@@ -389,133 +389,6 @@
           "archived": {
             "type": "boolean",
             "description": "For archived storage profiles, no vaults can be created any more."
-          }
-        }
-      },
-      "StorageProfileS3Dto": {
-        "title": "StorageProfileS3Dto",
-        "type": "object",
-        "required": [
-          "id",
-          "name",
-          "protocol",
-          "archived",
-          "storageClass",
-          "region",
-          "regions",
-          "bucketPrefix",
-          "stsRoleCreateBucketClient",
-          "stsRoleCreateBucketHub",
-          "bucketVersioning",
-          "bucketEncryption"
-        ],
-        "properties": {
-          "id": {
-            "description": "Technical identifier for a storage profile. Must be unique UUID. Clients will use this as vendor in profile and provider in vault bookmark",
-            "type": "string",
-            "$ref": "#/components/schemas/UUID"
-          },
-          "name": {
-            "type": "string",
-            "description": "Displayed when choosing type of a new vault in dropdown."
-          },
-          "protocol": {
-            "description": "Storage protocol: S3 (permanent credentials) or S3STS (STS).",
-            "type": "string",
-            "$ref": "#/components/schemas/Protocol"
-          },
-          "archived": {
-            "type": "boolean",
-            "description": "For archived storage profiles, no vaults can be created any more."
-          },
-          "scheme": {
-            "type": [
-              "string",
-              "null"
-            ],
-            "description": "Scheme of S3 endpoint for template upload/bucket creation. Defaults to default for protocol, i.e. https in most cases.",
-            "example": "https"
-          },
-          "hostname": {
-            "type": [
-              "string",
-              "null"
-            ],
-            "description": "Hostname S3 endpoint for template upload/bucket creation. Defaults to AWS SDK default.",
-            "example": "s3-us-gov-west-1.amazonaws.com"
-          },
-          "port": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32",
-            "description": "Port S3 endpoint for template upload/bucket creation. Defaults to default port for scheme.",
-            "example": 443
-          },
-          "withPathStyleAccessEnabled": {
-            "type": "boolean",
-            "description": "Whether to use path style for S3 endpoint for template upload/bucket creation.",
-            "example": false,
-            "default": false
-          },
-          "storageClass": {
-            "description": "Storage class for upload. Defaults to STANDARD",
-            "type": "string",
-            "example": "STANDARD",
-            "$ref": "#/components/schemas/S3_STORAGE_CLASSES"
-          },
-          "region": {
-            "type": "string",
-            "description": "Default region selected in the frontend/client to create bucket in.",
-            "example": "443",
-            "default": "us-east-1"
-          },
-          "regions": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
-            "description": "List of selectable regions in the frontend/client to create bucket in. Defaults to full list from AWS SDK."
-          },
-          "bucketPrefix": {
-            "type": "string",
-            "description": "Buckets are create with name <bucket prefix><vault UUID>.",
-            "example": "cipherduck"
-          },
-          "stsRoleCreateBucketClient": {
-            "type": "string",
-            "description": "STS role for clients to assume to create buckets. Will be the same as stsRoleCreateBucketHub for AWS, different for MinIO.",
-            "example": "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket"
-          },
-          "stsRoleCreateBucketHub": {
-            "type": "string",
-            "description": "STS role for frontend to assume to create buckets (used with inline policy and passed to hub storage). Will be the same as stsRoleCreateBucketClient for AWS, different for MinIO.",
-            "example": "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket"
-          },
-          "stsEndpoint": {
-            "type": [
-              "string",
-              "null"
-            ],
-            "description": "STS endpoint to use for AssumeRoleWithWebIdentity and AssumeRole for getting a temporary access token passed to the storage. Defaults to AWS SDK default."
-          },
-          "bucketVersioning": {
-            "type": "boolean",
-            "description": "Enable bucket versioning upon bucket creation",
-            "default": true
-          },
-          "bucketAcceleration": {
-            "type": [
-              "boolean",
-              "null"
-            ],
-            "description": "Enable bucket versioning upon bucket creation (null for MinIO)"
-          },
-          "bucketEncryption": {
-            "description": "Enable bucket versioning upon bucket creation",
-            "type": "string",
-            "$ref": "#/components/schemas/S3_SERVERSIDE_ENCRYPTION"
           }
         }
       },
@@ -671,6 +544,133 @@
             "type": "string",
             "description": "Session tag to use for role chaining (AWS only, not MinIO). Defaults to \"Vault\"",
             "default": "Vault"
+          }
+        }
+      },
+      "StorageProfileS3StaticDto": {
+        "title": "StorageProfileS3Dto",
+        "type": "object",
+        "required": [
+          "id",
+          "name",
+          "protocol",
+          "archived",
+          "storageClass",
+          "region",
+          "regions",
+          "bucketPrefix",
+          "stsRoleCreateBucketClient",
+          "stsRoleCreateBucketHub",
+          "bucketVersioning",
+          "bucketEncryption"
+        ],
+        "properties": {
+          "id": {
+            "description": "Technical identifier for a storage profile. Must be unique UUID. Clients will use this as vendor in profile and provider in vault bookmark",
+            "type": "string",
+            "$ref": "#/components/schemas/UUID"
+          },
+          "name": {
+            "type": "string",
+            "description": "Displayed when choosing type of a new vault in dropdown."
+          },
+          "protocol": {
+            "description": "Storage protocol: S3 (permanent credentials) or S3STS (STS).",
+            "type": "string",
+            "$ref": "#/components/schemas/Protocol"
+          },
+          "archived": {
+            "type": "boolean",
+            "description": "For archived storage profiles, no vaults can be created any more."
+          },
+          "scheme": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "Scheme of S3 endpoint for template upload/bucket creation. Defaults to default for protocol, i.e. https in most cases.",
+            "example": "https"
+          },
+          "hostname": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "Hostname S3 endpoint for template upload/bucket creation. Defaults to AWS SDK default.",
+            "example": "s3-us-gov-west-1.amazonaws.com"
+          },
+          "port": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32",
+            "description": "Port S3 endpoint for template upload/bucket creation. Defaults to default port for scheme.",
+            "example": 443
+          },
+          "withPathStyleAccessEnabled": {
+            "type": "boolean",
+            "description": "Whether to use path style for S3 endpoint for template upload/bucket creation.",
+            "example": false,
+            "default": false
+          },
+          "storageClass": {
+            "description": "Storage class for upload. Defaults to STANDARD",
+            "type": "string",
+            "example": "STANDARD",
+            "$ref": "#/components/schemas/S3_STORAGE_CLASSES"
+          },
+          "region": {
+            "type": "string",
+            "description": "Default region selected in the frontend/client to create bucket in.",
+            "example": "443",
+            "default": "us-east-1"
+          },
+          "regions": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "description": "List of selectable regions in the frontend/client to create bucket in. Defaults to full list from AWS SDK."
+          },
+          "bucketPrefix": {
+            "type": "string",
+            "description": "Buckets are create with name <bucket prefix><vault UUID>.",
+            "example": "cipherduck"
+          },
+          "stsRoleCreateBucketClient": {
+            "type": "string",
+            "description": "STS role for clients to assume to create buckets. Will be the same as stsRoleCreateBucketHub for AWS, different for MinIO.",
+            "example": "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket"
+          },
+          "stsRoleCreateBucketHub": {
+            "type": "string",
+            "description": "STS role for frontend to assume to create buckets (used with inline policy and passed to hub storage). Will be the same as stsRoleCreateBucketClient for AWS, different for MinIO.",
+            "example": "arn:aws:iam::<ACCOUNT ID>:role/cipherduck-createbucket"
+          },
+          "stsEndpoint": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "STS endpoint to use for AssumeRoleWithWebIdentity and AssumeRole for getting a temporary access token passed to the storage. Defaults to AWS SDK default."
+          },
+          "bucketVersioning": {
+            "type": "boolean",
+            "description": "Enable bucket versioning upon bucket creation",
+            "default": true
+          },
+          "bucketAcceleration": {
+            "type": [
+              "boolean",
+              "null"
+            ],
+            "description": "Enable bucket versioning upon bucket creation (null for MinIO)"
+          },
+          "bucketEncryption": {
+            "description": "Enable bucket versioning upon bucket creation",
+            "type": "string",
+            "$ref": "#/components/schemas/S3_SERVERSIDE_ENCRYPTION"
           }
         }
       },
@@ -1791,13 +1791,13 @@
         ]
       }
     },
-    "/api/storageprofile/s3": {
+    "/api/storageprofile/s3static": {
       "post": {
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/StorageProfileS3Dto"
+                "$ref": "#/components/schemas/StorageProfileS3StaticDto"
               }
             }
           },
